--- a/fp/CMakeLists.txt
+++ b/fp/CMakeLists.txt
@@ -3,4 +3,4 @@ project(fp)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(fp main.cpp LandBasedRobot/landbasedrobot.cpp LandBasedRobot/landbasedrobot.h LandBasedTracked/landbasedtracked.cpp LandBasedTracked/landbasedtracked.h LandBasedWheeled/landbasedwheeled.cpp LandBasedWheeled/landbasedwheeled.h Maze/maze.cpp Maze/maze.h Algorithm/algorithm.cpp Algorithm/algorithm.h)
+add_executable(fp main.cpp LandBasedRobot/landbasedrobot.cpp LandBasedRobot/landbasedrobot.h LandBasedTracked/landbasedtracked.cpp LandBasedTracked/landbasedtracked.h LandBasedWheeled/landbasedwheeled.cpp LandBasedWheeled/landbasedwheeled.h Maze/maze.cpp Maze/maze.h Algorithm/algorithm.cpp Algorithm/algorithm.h api/api.cpp api/api.h)
